--- a/style.css
+++ b/style.css
@@ -31,8 +31,6 @@ h1,h2,h3{
     color: var(--VeryDarkViolet);
 }
 /* navbar */
-
-
 .body--header{
     height: 100px;
     display: flex;
@@ -92,7 +90,7 @@ h1,h2,h3{
 /* hero */
 main{
     padding: 0 4.5rem;
-    overflow-x: visible;
+    overflow: hidden;
 }
 .hero{
     display: grid;
@@ -181,14 +179,167 @@ main{
 .shorted--links li{
     width: 100%;
 }
-/* crear como se mostrara la url acortada */
+.shorted--link{
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem;
+    background-color: white;
+    margin-top: 1rem;
+    border-radius: 9px;
+}
+.shorted--link a:nth-child(1){
+    color: var(--Cyan);
+    text-decoration: none;
+    padding-right: 1rem;
+}
+.shorted--link a.btn{
+    border-radius: 7px;
+    transition: 100ms ease-in-out;
+}
+.shorted--link .copied{
+    background-color: var(--VeryDarkViolet);
+}
+
 
 /* shortening */
 
+/* details section */
+
+.details{
+    background-color: hsl(225, 33%, 95%);
+    width: 100vw;
+    padding-top: 18rem;
+    position: relative;
+    z-index: -99;
+    margin-top: -11rem;
+    margin-left: -4.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.details header{
+    text-align: center;
+}
+.details header h2{
+    font-size: 2.3rem;
+}
+.details header p{
+    text-align: center;
+    max-width: 45ch;
+    line-height: 2rem;
+    padding-top: .7rem;
+}
+
+/* card */
+
+.cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+    grid-gap: 1rem;
+    padding: 4.5rem 0;
+    padding-bottom: 7rem;
+}
+.card{
+    background-color: white;
+    padding: 3.5rem 1.5rem 2rem 1.5rem;
+    position: relative;
+    border-radius: 5px;
+}
+.card:nth-child(1)::after{
+    content: url(images/icon-brand-recognition.svg);
+    
+}
+.card:nth-child(2)::after{
+    content: url(images/icon-detailed-records.svg);
+    padding: 1.3rem 1.5rem 1.1rem 1.5rem;
+}
+.card:nth-child(3)::after{
+    content: url(images/icon-fully-customizable.svg);
+
+}
+.card::after{
+    position: absolute;
+    background-color: var(--VeryDarkBlue);
+    padding: 1.3rem 1.5rem;
+    border-radius: 50%;
+    display: flex;
+    top: -20%;
+}
+.card:not(:nth-child(3))::before{
+    content: '';
+    position: absolute;
+    height: 8px;
+    width: 1rem;
+    background-color: var(--Cyan);
+    right: -1rem;
+    transform: translateY(5rem);
+}
+.card p{
+    padding: 1rem 0;
+}
+.card:nth-child(2){
+    transform: translateY(2rem);
+}
+.card:nth-child(2)::before{
+    transform: translateY(3rem);
+}
+.card:nth-child(3){
+    transform: translateY(5rem);
+}
+
+/* details section */
+
+/* main footer */
+.main--footer{
+    width: 100vw;
+    background-color: var(--DarkViolet);
+    height: 230px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url(images/bg-boost-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.main--footer h2{
+    padding: 1rem 0;
+    color: white;
+}
+.secondary--footer{
+    background-color: var(--VeryDarkViolet);
+    display: flex;
+    justify-content: space-around;
+    padding: 3.5rem 0 4.5rem 0;
+    height: 100%;
+}
+.footer--nav{
+    display: flex;
+    
+}
+.footer--nav ul{
+    list-style: none;
+    padding-left: 2.5rem;
+    color: var(--Gray);
+    line-height: 2rem;
+}
+.footer--nav ul li{
+    transition: 300ms ease-in-out;
+    cursor: pointer;
+
+}
+.nav-title{
+    color: white;
+    padding-bottom: 1rem;
+}
 /* footer */
 .social-media-icons ul {
     list-style: none;
     display: flex;
+    padding: 0 4.5rem;
   }
   
   .social-media-icons ul li {
@@ -200,18 +351,10 @@ main{
     color: white;
   }
   
-  .fa-twitter-square:hover {
-    color: hsl(210, 82%, 64%);
+  .fab:hover, .footer--nav ul li:not(.nav-title):hover {
+    color: var(--Cyan)
   }
-  .fa-facebook-square:hover {
-    color: hsl(210, 87%, 49%);
-  }
-  .fa-instagram:hover {
-    color: hsl(37, 89%, 58%);
-  }
-  .fa-pinterest-square:hover {
-    color: rgb(216, 76, 76);
-  }
+
   .social-media-icons ul {
     list-style: none;
     display: flex;
@@ -221,3 +364,293 @@ main{
   .social-media-icons ul li {
     padding: 0 0.4rem;
   }
+
+  @media (max-width:780px){
+    /* navbar */
+    .body--header{
+        padding: 0 1.5rem;
+    }
+
+
+    .mobile{
+        padding: 18px 14px;
+        background-image: url(images/icon-hamburger.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        cursor: pointer;
+        display: flex;
+    }
+    .desktop{
+        display: none;
+    }
+    #menu{
+        display: none;
+    }
+    /* navbar */
+
+    /* hero */
+    main{
+        padding: 0 1.5rem;
+        overflow: hidden;
+    }
+    .hero{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-flow: dense;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        overflow-x: hidden;
+    }
+
+
+
+    .hero .right {
+        width: 100%;
+        height: 100%;
+        grid-row: 1;
+
+    }
+    .hero .left {
+        width: 100%;
+        height: 100%;
+        grid-row: 2;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .hero .right figure{
+        padding-top: 1rem;
+        z-index: 0;
+        transform: translateX(0);
+    }
+    .hero h1{
+        font-size: 4.5rem;
+        line-height: 4.5rem;
+        font-weight: 700;
+        text-align: center;
+    }
+    .hero p{
+        max-width: 100%;
+        padding: 1rem 0;
+        text-align: center;
+    }
+
+    /* hero */
+
+    /* shortening */
+    .short{
+        width: 100%;
+        height: 100%;
+    }
+    .shortening{
+        background-color: var(--DarkViolet);
+        height: 100%;
+        padding: 2rem 0;
+
+        align-items: center;
+        background-image: url(images/bg-shorten-mobile.svg);
+        background-repeat: no-repeat;
+        background-position: right;
+        background-size: cover;
+        border-radius: 9px;
+        justify-content: center;
+    }
+    .shortening form{
+        display: flex;
+        width: 90%;
+        flex-direction: column;
+    }
+    .shortening form input{
+        height: 50px;
+        border-radius: 7px;
+    }
+    .shortening form input:nth-child(1){
+        width: 100%;
+        padding:1rem ;
+        font-size: 18px;
+        margin-bottom: 1rem;
+        border: none;
+    }
+    .shortening form input:nth-child(1):focus{
+        outline: none;
+    }
+    .shortening form input:nth-child(2){
+        width: 100%;
+        
+    }
+
+
+
+
+    /* shortening */
+
+    /* details section */
+
+    .details{
+    background-color: hsl(225, 33%, 95%);
+    width: 100vw;
+    padding-top: 18rem;
+    position: relative;
+    z-index: -99;
+    margin-top: -11rem;
+    margin-left: -1.5rem;
+
+    }
+    .details header p{
+        max-width: 100%;
+    }
+
+    /* card */
+
+    .cards{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+        grid-gap: 1rem;
+        padding: 4.5rem 0;
+        padding-bottom: 7rem;
+        margin: 0 1rem;
+    }
+    .card{
+        background-color: white;
+        padding: 4.5rem 1.5rem 2rem 1.5rem;
+        position: relative;
+        border-radius: 5px;
+        text-align: center;
+        margin: 1rem
+    }
+    .card:nth-child(1)::after{
+        content: url(images/icon-brand-recognition.svg);
+        
+    }
+    .card:nth-child(2)::after{
+        content: url(images/icon-detailed-records.svg);
+        padding: 1.3rem 1.5rem 1.1rem 1.5rem;
+    }
+    .card:nth-child(3)::after{
+        content: url(images/icon-fully-customizable.svg);
+
+    }
+    .card::after{
+        position: absolute;
+        background-color: var(--VeryDarkBlue);
+        padding: 1.3rem 1.5rem;
+        border-radius: 50%;
+        display: flex;
+        top: -20%;
+        left: 41.50%;
+    }
+    .card:not(:nth-child(3))::before{
+        content: '';
+        position: absolute;
+        height: 2rem;
+        width: 8px;
+        background-color: var(--Cyan);
+        right: auto;
+        bottom: 0;
+        transform: translateY(2rem);
+    }
+    .card p{
+        padding: 1rem 0;
+    }
+    .card:nth-child(2){
+        transform: translateY(2rem);
+    }
+    .card:nth-child(2)::before{
+        transform: translateY(2rem);
+    }
+    .card:nth-child(3){
+        transform: translateY(4rem);
+    }
+
+    /* details section */
+
+    /* main footer */
+.main--footer{
+    width: 100vw;
+    background-color: var(--DarkViolet);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url(images/bg-boost-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 2.5rem 0;
+}
+.main--footer h2{
+    padding: 1rem 0;
+    color: white;
+}
+.secondary--footer{
+    background-color: var(--VeryDarkViolet);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 3.5rem 0 4.5rem 0;
+    width: 100%;
+    height: 100%;
+}
+.logo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.footer--nav{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem 0;
+}
+.footer--nav ul{
+    list-style: none;
+    padding-left: 0;
+    color: var(--Gray);
+    line-height: 2rem;
+}
+.footer--nav ul li{
+    transition: 300ms ease-in-out;
+    cursor: pointer;
+
+}
+.nav-title{
+    margin-top: .7rem;
+    padding-bottom: .4rem;
+}
+    /* footer */
+    .social-media-icons ul {
+        list-style: none;
+        display: flex;
+        padding: 0;
+    }
+    
+    .social-media-icons ul li {
+        padding: 0 0.4rem;
+    }
+    
+    .social-media-icons ul li a i {
+        transition: 300ms ease;
+        color: white;
+    }
+    
+    .fab:hover, .footer--nav ul li:not(.nav-title):hover {
+        color: var(--Cyan)
+    }
+
+    .social-media-icons ul {
+        list-style: none;
+        display: flex;
+        padding-left: 0;
+    }
+    
+    .social-media-icons ul li {
+        padding: 0 0.4rem;
+    }
+}
