--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ main{
     grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
     grid-gap: 1rem;
     padding: 4.5rem 0;
-    padding-bottom: 7rem;
+    padding-bottom: 14rem;
 }
 .card{
     background-color: white;
@@ -365,7 +365,7 @@ main{
     padding: 0 0.4rem;
   }
 
-  @media (max-width:780px){
+  @media (max-width:880px){
     /* navbar */
     .body--header{
         padding: 0 1.5rem;
@@ -399,15 +399,16 @@ main{
         grid-auto-flow: dense;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        overflow-x: hidden;
+        height: 100%;
+        overflow: hidden;
+        margin-bottom: 2rem;
     }
 
 
 
     .hero .right {
         width: 100%;
-        height: 100%;
+        height: 350px;
         grid-row: 1;
 
     }
@@ -520,6 +521,20 @@ main{
         text-align: center;
         margin: 1rem
     }
+    .card::after{
+        position: absolute;
+        background-color: var(--VeryDarkBlue);
+        padding: 1.3rem 1.5rem;
+        max-height:88px;
+        max-width: 88.5px;
+        border-radius: 50%;
+        display: flex;
+        top: -20%;
+        right: 0;
+        left: 0;
+        margin: 0 auto;
+        
+    }
     .card:nth-child(1)::after{
         content: url(images/icon-brand-recognition.svg);
         
@@ -530,26 +545,20 @@ main{
     }
     .card:nth-child(3)::after{
         content: url(images/icon-fully-customizable.svg);
+        padding: 1.3rem 1.225rem 1.5rem;
+    }
 
-    }
-    .card::after{
-        position: absolute;
-        background-color: var(--VeryDarkBlue);
-        padding: 1.3rem 1.5rem;
-        border-radius: 50%;
-        display: flex;
-        top: -20%;
-        left: 41.50%;
-    }
     .card:not(:nth-child(3))::before{
         content: '';
         position: absolute;
-        height: 2rem;
+        height: 3rem;
         width: 8px;
         background-color: var(--Cyan);
-        right: auto;
+        right: 0;
+        left: 0;
+        margin: 0 auto;
         bottom: 0;
-        transform: translateY(2rem);
+        transform: translateY(3rem);
     }
     .card p{
         padding: 1rem 0;
@@ -558,7 +567,7 @@ main{
         transform: translateY(2rem);
     }
     .card:nth-child(2)::before{
-        transform: translateY(2rem);
+        transform: translateY(3rem);
     }
     .card:nth-child(3){
         transform: translateY(4rem);
@@ -568,7 +577,7 @@ main{
 
     /* main footer */
 .main--footer{
-    width: 100vw;
+    width: 100%;
     background-color: var(--DarkViolet);
     height: 100%;
     display: flex;
