--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ h3 {
   transform: translateY(-280px);
   transition: 400ms ease-in-out;
 }
+.label-btn{
+  display: none;
+}
 .mobile__menu ul{
   position: relative;
   z-index: 99;
